# MiniMax-claude-proxy

./: .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MILESTONES.md  README.md  SUPPORT.md  config.yaml.example  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/workflows/: docs.yml  gitleaks.yml  lint.yml  test.yml
docs/: api.md  architecture.md  configuration.md  contributing.md  index.md  quickstart.md  security.md  troubleshooting.md  v0.2.0-spec.md
docs/blog/: jike.md  sspai.md  v2ex.md
latest/: 404.html  index.html  sitemap.xml
latest/api/: index.html
latest/architecture/: index.html
latest/blog/jike/: index.html
latest/blog/sspai/: index.html
latest/changelog/: index.html
latest/configuration/: index.html
latest/contributing/: index.html
latest/license/: index.html
latest/milestones/: index.html
latest/quickstart/: index.html
latest/search/: search_index.json
latest/security/: index.html
latest/stylesheets/: extra.css
latest/troubleshooting/: index.html
latest/v0.2.0-spec/: index.html
proxy/: __init__.py  config.py  main.py  models.py  upstream.py
proxy/middleware/: __init__.py  cache.py  multimodal.py  schema.py  sse.py  thinking.py
proxy/tools/: __init__.py  code_exec.py  registry.py  web_search.py
proxy/utils/: hashing.py  logging.py
scripts/: capture_screenshots.py  dev.sh  install.sh  start.sh
tests/: conftest.py  test_basic.py  test_e2e.py
(+1 files in other folders)
