[project]
name = "MiniMax-claude-proxy"
version = "0.1.0"
description = "Local proxy that backfills Anthropic-specific features for MiniMax-M3 under Claude Code"
requires-python = ">=3.10"
authors = [{name = "The MiniMax-Claude-Proxy Authors"}]
readme = "README.md"

[project.scripts]
MiniMax-proxy = "proxy.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["proxy", "proxy.middleware", "proxy.tools", "proxy.utils"]
